kubernetes-ingress-hands-on/exercises/07-tls-termination/exercise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: ingress-lab
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tls.ingress.local
      secretName: tls-ingress-local
  rules:
    - host: tls.ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
